--- a/index.css
+++ b/index.css
@@ -1,3 +1,20 @@
-body{
+body {
     background-color: #FFBA00;
+    font-family: 'Inconsolata', monospace;
+    text-align: center;
+    margin: 0;
+    padding: 2rem 0;
+    width: 100%;
+}
+
+main {
+    background: white;
+    width: 90%;
+    margin: auto;
+    border-radius: 5px;
+    padding: 2rem 0;
+}
+
+h1 {
+    margin: 3rem 1rem 6rem 1rem;
 }
